--- a/Bezos/src/main/webapp/styles/MainStyle.css
+++ b/Bezos/src/main/webapp/styles/MainStyle.css
@@ -6,10 +6,9 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;
-	display: flex;
-	flex-direction: column;
 	height: 100vh;
 	min-height: 500px;
+
 }
 
 header {
@@ -59,23 +58,16 @@ header {
 }
 
 .main {
-	flex: 1;
+
 	padding: 20px;
 	border: 1px solid #ccc;
 	background-color: #2B67F6;
+	height: 100vh;
 
 	display: flex;
-	flex-direction: column;
 
 	font-family: 'Epilogue';
 
-}
-
-form {
-	width: 100%;
-	/* Make the form fill the entire width of the container */
-	max-width: 300px;
-	/* Set a maximum width for the form */
 }
 
 label {
@@ -86,40 +78,8 @@ label {
 	font-family: 'Epilogue';
 }
 
-#search {
-	width: 200px;
-	padding: 8px;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-}
 
 
-
-.myTable table {
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: white;
-	color: black;
-
-}
-
-tr,
-td,
-th {
-	padding: 10px;
-
-}
-
-.tableContainer {
-	padding: 50px;
-	align-items: center;
-	/* Center align form elements horizontally */
-	justify-content: center;
-	background-color: white;
-	color: black;
-
-}
 
 .blackButton {
 	border-radius: 20px;
@@ -134,6 +94,7 @@ th {
 
 	border: 2px solid transparent;
 	transition: 0.15s;
+	flex: 1;
 	display: flex;
 	/* flex-direction: column;*/
 	align-items: center;
