--- a/Bezos/src/main/webapp/styles/SearchStyle.css
+++ b/Bezos/src/main/webapp/styles/SearchStyle.css
@@ -112,6 +112,17 @@ th {
 
 }
 
+.main button {
+	font-size: 20px;
+	width: fit-content;
+	height: fit-content;
+	margin: 20px;
+	
+	
+}
+
+
+
 .tableContainer {
 	padding: 50px;
 	align-items: center;
